...
    };

    initializeData();
  }, []);

  return (
    <View testID='libraryScreenView' style={styles.container}>
      {Header(navigation)}
      {SegmentedControl(selectedIndex, setIndex)}
      <SafeAreaView style={styles.cardsContainer}>
        {selectedIndex === 0 ? Places(savedPlaces) : Events(events)}
      </SafeAreaView>
    </View>
...
