...
        );

        setLoading(true);

        let _liveEvents: Map<number, Place[]> = new Map();
        const promises = subcategoryIds?.map(async (subcategoryId: number) => {
          const events: Place[] | null = await getDestinations(
            categoryId,
            floats.defaultRadiusFar,
            latitude,
            longitude,
            undefined,
            subcategoryId,
...
